--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,21 @@
 Package: triangulr
-Title: What the Package Does (One Line, Title Case)
+Title: High Performance Triangular Distribution Functions in R
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Alvin",
+           family = "Nursalim",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+           email = "alvin.nursalim@outlook.com")
+Description: triangulr provides high performance distribution functions for the
+    triangular distribution with a similar interface as the distribution
+    functions from the stats library.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Collate: 
+    'dtriang.R'
+    'ptriang.R'
+    'qtriang.R'
+    'rtriang.R'
