--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,6 @@ export(dtriang)
 export(ptriang)
 export(qtriang)
 export(rtriang)
-importFrom(stats,runif)
+importFrom(Rcpp,sourceCpp)
+importFrom(vctrs,vec_recycle)
+useDynLib(triangulr)
