--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(ptriang)
 export(qtriang)
 export(rtriang)
 importFrom(Rcpp,sourceCpp)
+importFrom(stats,runif)
 importFrom(vctrs,vec_recycle_common)
 useDynLib(triangulr)
