--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,10 +16,16 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Collate: 
     'RcppExports.R'
-    'dtriang.R'
-    'ptriang.R'
-    'qtriang.R'
-    'rtriang.R'
+    'Triangular.R'
+    'ctri.R'
+    'dtri.R'
+    'etri.R'
+    'mtri.R'
+    'ptri.R'
+    'qtri.R'
+    'rtri.R'
+    'utils.R'
+    'vtri.R'
 LinkingTo: 
     Rcpp
 Imports: 
