--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(mgtri)
 export(ptri)
 export(qtri)
 export(rtri)
-export(vtri)
+export(vartri)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,runif)
 importFrom(vctrs,vec_recycle_common)
