--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: triangulr
 Title: High-Performance Triangular Distribution Functions
-Version: 0.0.2.9001
+Version: 0.1.0
 Authors@R: 
     person(given = "Alvin",
            family = "Nursalim",
@@ -25,6 +25,7 @@ Collate:
     'Triangular.R'
     'ctri.R'
     'dtri.R'
+    'error.R'
     'estri.R'
     'mgtri.R'
     'ptri.R'
@@ -34,7 +35,7 @@ LinkingTo:
     Rcpp
 Imports: 
     Rcpp (>= 1.0.5),
-    stats (>= 4.0.2),
+    rlang (>= 0.4.7),
     vctrs (>= 0.3.4)
 Suggests: 
     testthat (>= 2.3.2)
