--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Description: A collection of high-performance functions for the triangular
     moment generating function, characteristic function, and expected shortfall.
 License: MIT + file LICENSE
 URL: https://github.com/irkaal/triangulr
-BugReports: http://github.com/irkaal/triangulr/issues
+BugReports: https://github.com/irkaal/triangulr/issues
 Depends:
     R (>= 3.1)
 Encoding: UTF-8
