--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,13 +11,15 @@ Description: A collection of high-performance functions for the triangular
     distribution function, quantile function, random variate generator, moment
     generating function, characteristic function, and expected shortfall
     function. References: Samuel Kotz, Johan Ren Van Dorp (2004)
-    <doi:10.1142/5720> and Acerbi, Carlo & Tasche, Dirk. (2002)
-    <doi:10.1111/1468-0300.00091>.
+    <doi:10.1142/5720>, Melissa E. O'Neill (2014)
+    <https://www.cs.hmc.edu/tr/hmc-cs-2014-0905.pdf>, David Blackman and
+    Sebastiano Vigna (2018) <arXiv:1805.01407>, and Acerbi, Carlo and
+    Tasche, Dirk. (2002) <doi:10.1111/1468-0300.00091>.
 License: MIT + file LICENSE
 URL: https://github.com/irkaal/triangulr/ https://irkaal.github.io/triangulr/
 BugReports: https://github.com/irkaal/triangulr/issues
 Depends:
-    R (>= 3.1)
+    R (>= 3.2)
 Encoding: UTF-8
 LazyData: true
 ByteCompile: true
