--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,9 +11,7 @@ Description: A collection of high-performance functions for the triangular
     distribution function, quantile function, random variate generator, moment
     generating function, characteristic function, and expected shortfall
     function. References: Samuel Kotz, Johan Ren Van Dorp (2004)
-    <doi:10.1142/5720>, Melissa E. O'Neill (2014)
-    <https://www.cs.hmc.edu/tr/hmc-cs-2014-0905.pdf>, David Blackman and
-    Sebastiano Vigna (2018) <arXiv:1805.01407>, and Acerbi, Carlo and
+    <doi:10.1142/5720> and Acerbi, Carlo and
     Tasche, Dirk. (2002) <doi:10.1111/1468-0300.00091>.
 License: MIT + file LICENSE
 URL: https://github.com/irkaal/triangulr/ https://irkaal.github.io/triangulr/
@@ -29,12 +27,10 @@ Collate:
     'Triangular.R'
     'error.R'
 LinkingTo: 
-    Rcpp,
-    dqrng
+    Rcpp
 Imports: 
     Rcpp (>= 1.0.6),
     rlang (>= 0.4.11),
-    vctrs (>= 0.3.8),
-    dqrng (>= 0.2.1)
+    vctrs (>= 0.3.8)
 Suggests: 
     testthat (>= 3.0.2)
