--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,11 +7,10 @@ export(mgtri)
 export(ptri)
 export(qtri)
 export(rtri)
-importFrom(Rcpp,sourceCpp)
 importFrom(rlang,as_name)
 importFrom(rlang,cnd_signal)
 importFrom(rlang,error_cnd)
 importFrom(rlang,format_error_bullets)
 importFrom(vctrs,vec_c)
 importFrom(vctrs,vec_recycle_common)
-useDynLib(triangulr)
+useDynLib(triangulr, .registration = TRUE)
